// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders as expected when passing a wallet icon 1`] = `
<button
  className="lab-iconbtn lab-iconbtn--teal"
  onClick={[Function]}
>
   
  <span
    className="lab-icon lab-icon--wallet lab-icon--mineral-80 lab-icon--petit lab-iconbtn__icon"
  />
</button>
`;

exports[`renders as expected when passing disabled as true 1`] = `
<button
  className="lab-iconbtn lab-iconbtn--teal"
  disabled={true}
  onClick={[Function]}
>
   
  <span
    className="lab-icon lab-icon--remove lab-icon--mineral-80 lab-icon--petit lab-iconbtn__icon"
  />
</button>
`;

exports[`renders with base props 1`] = `
<button
  className="lab-iconbtn lab-iconbtn--teal"
  onClick={[Function]}
>
   
  <span
    className="lab-icon lab-icon--star lab-icon--mineral-80 lab-icon--petit lab-iconbtn__icon"
  />
</button>
`;
